0066218 - fix order confirmation visibility

--- a/app/design/frontend/Fecon/theme/IWD_Opc/web/css/source/_module.less
+++ b/app/design/frontend/Fecon/theme/IWD_Opc/web/css/source/_module.less
@@ -786,10 +786,9 @@
           padding: 0 @default_margin_section 0 @default_margin_section;
           text-align: center;
           a {
-            color: @active_color;
+            color: @active_color_hover;
             &:hover {
-              color: @active_color_hover;
-              text-decoration: none;
+              text-decoration: underline;
             }
           }
         }
